@@ -6,8 +6,17 @@ Use `docker stats` to show CPU, memory, network read/writes, and total disk read
 
 Use [jstat](https://docs.oracle.com/javase/8/docs/technotes/tools/unix/jstat.html) to monitor a running system/JVM. The following command will connect to a Manager and print garbage collection statistics (polling 1000 times, waiting for 2.5 seconds):
 
+## Diagnosing JVM memory problems
+
+Get current memory configuration:
+
 ```
-docker exec -it <Manager Container ID/Name> /usr/bin/jstat -gcutil 1 2500 1000
+docker exec -it openremote_manager_1 /usr/bin/jstat -gccapacity 1
+```
+
+
+```
+docker exec -it openremote_manager_1 /usr/bin/jstat -gcutil 1 2500 1000
 ```
 
 The output contains:
@@ -29,14 +38,9 @@ GCT: Total garbage collection time.
 Force garbage collection with: 
 
 ```
-docker exec -it <Manager Container ID/Name> /usr/bin/jcmd 1 GC.run
+docker exec -it openremote_manager_1 /usr/bin/jcmd 1 GC.run
 ```
 
-Get current memory configuration:
-
-```
-docker exec -it <Manager Container ID/Name> /usr/bin/jstat -gccapacity 1
-```
 
 Output contains:
 
@@ -61,49 +65,12 @@ YGC: Number of young generation GC events.
 FGC: Number of full GC events.
 ```
 
-## Restarting a Manager with new settings
-
-Increase the log detail by adjusting the levels; first copy [logging.properties](https://raw.githubusercontent.com/openremote/openremote/master/deployment/manager/logging.properties) onto your Docker host (e.g. to `/data/manager/`) and then edit the file. 
-
-Edit your `docker-compose.yml`:
-
-```
-  manager:
-    environment:
-
-      # Optional: Override built-in logging.properties with a file of your choice.
-      # LOGGING_CONFIG_FILE: /my/manager/logging.properties
-
-    # Override entrypoint for custom JVM options
-    # entrypoint:
-    #  - "java"
-    #  - "-Xmx1024m"
-    #  - "-XX:+PrintGCDetails"
-    #  - "-cp"
-    #  - "/opt/app/lib/*"
-    #  - "org.openremote.manager.server.Main"
-```
-
-See [demo.yml](https://github.com/openremote/openremote/blob/master/profile/demo.yml) for all options.
-
-After changing any configuration, restart the service with:
-
-```
-SERVICE=manager && PROJECT=<Your project name> && PROFILE=<Your docker-compose.yml> && \
-  docker-compose -p $PROJECT -f $PROFILE stop $SERVICE && \
-  docker-compose -p $PROJECT -f $PROFILE rm -f $SERVICE && \
-  docker-compose -p $PROJECT -f $PROFILE create $SERVICE && \
-  docker-compose -p $PROJECT -f $PROFILE start $SERVICE 
-```
-
-Make sure the `SETUP_*` variables are configured as needed, you may wipe your database if this is wrong!
-
 ## Working on the JVM with a JMX command-line
 
 Run [jmxterm](http://wiki.cyclopsgroup.org/jmxterm/manual.html):
 
 ```
-docker exec -it <Manager Container ID/Name> java -cp /opt/app/lib/* org.cyclopsgroup.jmxterm.boot.CliMain
+docker exec -it openremote_manager_1 java -cp /opt/app/lib/* org.cyclopsgroup.jmxterm.boot.CliMain
 
 Welcome to JMX terminal. Type "help" for available commands.
 $>open 1
